force-app/main/default/objects/Project_Agency__c/Project_Agency__c.object-meta.xml
<CustomObject>
    <label>Project Agency</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Project Agency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>