force-app/main/default/objects/Project_Agency__c/fields/Agency_Zip_Code_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Agency_Zip_Code_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Zip Code Assignment</label>
    <referenceTo>Agency_Zip_Code_Assignment__c</referenceTo>
    <relationshipLabel>Project Agencies</relationshipLabel>
    <relationshipName>Project_Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>