force-app/main/default/objects/Project_Agency__c/fields/Project_Agency__c.field-meta.xml
<CustomField>
    <fullName>Project_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Agencies</relationshipLabel>
    <relationshipName>Project_Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>