force-app/main/default/objects/Project_Agency__c/fields/SAP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_External_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>