force-app/main/default/objects/Project_Agency__c/fields/Showroom_Champion__c.field-meta.xml
<CustomField>
    <fullName>Showroom_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Agencies (Showroom Champion)</relationshipLabel>
    <relationshipName>Project_Agencies1</relationshipName>
    <type>Lookup</type>
</CustomField>